# libsphinxql

./: CMakeLists.txt  LICENSE  README.md
include/sphinxql/: querybuilder.h  sphinxql.h
src/: querybuilder.cc  sphinxql.cc
tests/: create_index.sh  idx-data.xml  indexer.conf  run-tests.sh  test_build.cc  test_query.cc
